--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ Mako==1.1.4
 MarkupSafe==1.1.1
 psycopg2-binary==2.8.6
 PyJWT==2.0.1
+PyMySQL==1.0.2
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 python-editor==1.0.4
