--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Mac
+.DS_Store
+
 # ignore postgresql tablespace folder
 PG_13_202007201/
 
@@ -14,3 +17,6 @@ tests.py
 # ignore the environment
 # this file
 .env
+
+# not necessary(can be recreated)
+messages.pot
